--- a/Tarefas/src/Tarefas.Web/Views/Tarefas/Detail.cshtml
+++ b/Tarefas/src/Tarefas.Web/Views/Tarefas/Detail.cshtml
@@ -1,10 +1,10 @@
 @model Tarefas.Web.Models.TarefaViewModel;
 
-<form asp-action= "create">
+<form asp-action= "details">
     @Html.LabelFor(model => model.Titulo,new{ @class = "form-label"} )
     @Html.TextBoxFor(model => model.Titulo, new {@class = "form-control"})
     @Html.LabelFor(model => model.Descricao,new{ @class = "form-label"} )
-    @Html.TextBoxFor(model => model.Descricao, new {@class = "form-control", })
+    @Html.TextBoxFor(model => model.Descricao, new {@class = "form-control", @readonly = "true"})
 
-    <input type="submit"></input>
+    <input asp-action="Index" asp-controller="Tarefas">Voltar </input>
 </form>
