--- a/Tarefas/src/Tarefas.Web/Views/Tarefa/Index.cshtml
+++ b/Tarefas/src/Tarefas.Web/Views/Tarefa/Index.cshtml
@@ -1,5 +1,5 @@
 @model IEnumerable<Tarefas.Web.Models.TarefaViewModel>
-
+<body>
     <table class= "table">
 
    
@@ -23,3 +23,5 @@
     }
     
     </table>
+    
+</body>
